[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/gui/options/options.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/gui/background/background.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/themes/font_medium.tres" type="Theme" id=4]
[ext_resource path="res://addons/utils/button_highlighter.gd" type="Script" id=5]
[ext_resource path="res://textures/buttons/mask.png" type="BitMap" id=6]
[ext_resource path="res://textures/buttons/back.svg" type="Texture" id=7]
[ext_resource path="res://addons/simple-gui-transitions/transition.gd" type="Script" id=8]
[ext_resource path="res://textures/buttons/button_focus.svg" type="Texture" id=9]

[node name="Options" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 3 )]
visible = false

[node name="GuiTransition" type="Node" parent="."]
script = ExtResource( 8 )
layout = NodePath("..")
controls = [ NodePath("../MarginContainer/HBoxContainer/VBoxContainer/ButtonBack"), NodePath("../MarginContainer/HBoxContainer/VBoxContainer2/Label"), NodePath("../MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer") ]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 204.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 204.0
margin_bottom = 482.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="ButtonBack" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 486.0
margin_right = 204.0
margin_bottom = 680.0
focus_neighbour_top = NodePath("../../VBoxContainer2/HBoxContainer/VBoxContainerControls/SliderBgm")
focus_neighbour_bottom = NodePath("../../VBoxContainer2/HBoxContainer/VBoxContainerControls/ButtonLanguage")
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 9 )
texture_click_mask = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer/ButtonBack"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 310.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 314.0
margin_right = 926.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Control3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 612.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 76.0
margin_right = 612.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Options"
align = 1
valign = 1

[node name="Control5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 152.0
margin_right = 612.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 170.0
margin_right = 612.0
margin_bottom = 603.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="VBoxContainerLabels" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 202.0
margin_bottom = 433.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="LabelLanguage" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerLabels"]
margin_right = 202.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Language"
align = 1
valign = 1

[node name="LabelFullscreen" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerLabels"]
margin_top = 87.0
margin_right = 202.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Fullscreen"
align = 1
valign = 1

[node name="LabelShadows" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerLabels"]
margin_top = 174.0
margin_right = 202.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Shadows"
align = 1
valign = 1

[node name="LabelSfx" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerLabels"]
margin_top = 262.0
margin_right = 202.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Effects"
align = 1
valign = 1

[node name="LabelBgm" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerLabels"]
margin_top = 349.0
margin_right = 202.0
margin_bottom = 433.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Music"
align = 1
valign = 1

[node name="VBoxContainerControls" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 206.0
margin_right = 612.0
margin_bottom = 433.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonLanguage" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls"]
margin_right = 406.0
margin_bottom = 83.0
focus_neighbour_top = NodePath("../../../../VBoxContainer/ButtonBack")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "English"

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/ButtonLanguage"]
script = ExtResource( 5 )

[node name="ButtonFullscreen" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls"]
margin_top = 87.0
margin_right = 406.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Disabled"

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/ButtonFullscreen"]
script = ExtResource( 5 )

[node name="ButtonShadows" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls"]
margin_top = 174.0
margin_right = 406.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Disabled"

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/ButtonShadows"]
script = ExtResource( 5 )

[node name="SliderSfx" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls"]
margin_top = 262.0
margin_right = 406.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.1
value = 0.5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/SliderSfx"]
script = ExtResource( 5 )

[node name="SliderBgm" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls"]
margin_top = 349.0
margin_right = 406.0
margin_bottom = 433.0
focus_neighbour_bottom = NodePath("../../../../VBoxContainer/ButtonBack")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.1
value = 0.5

[node name="ButtonHighlighter" type="Node" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/SliderBgm"]
script = ExtResource( 5 )

[node name="Control4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 607.0
margin_right = 612.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 930.0
margin_right = 1032.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1036.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/ButtonLanguage" to="." method="_on_ButtonLanguage_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/ButtonFullscreen" to="." method="_on_ButtonFullscreen_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/ButtonShadows" to="." method="_on_ButtonShadows_pressed"]
[connection signal="drag_ended" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/SliderSfx" to="." method="_on_SliderSfx_drag_ended"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/SliderSfx" to="." method="_on_SliderSfx_value_changed"]
[connection signal="drag_ended" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/SliderBgm" to="." method="_on_SliderBgm_drag_ended"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainerControls/SliderBgm" to="." method="_on_SliderBgm_value_changed"]
